# cortex-shell

./: .gitignore  .gitlint  .pre-commit-config.yaml  .prettierrc.js  .prettierrc.yml  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
cortex_shell/: __main__.py  application.py  cache.py  chat_session.py  constants.py  error_handler.py  errors.py  role.py  util.py  yaml.py
cortex_shell/client/: base_client.py  chatgpt_client.py  iclient.py
cortex_shell/configuration/: __init__.py  config.py  schema.py  validator.py  validators.py
cortex_shell/handlers/: default_handler.py  ihandler.py  repl_handler.py
cortex_shell/history/: ihistory.py  persistent_history.py  volatile_history.py
cortex_shell/post_processing/: file_output_post_processing.py  ipost_processing.py  no_post_processing.py  shell_execution_post_processing.py
cortex_shell/processing/: default_processing.py  file_processing.py  iprocessing.py
cortex_shell/renderer/: formatted_renderer.py  irenderer.py  none_renderer.py  plain_renderer.py
cortex_shell/resources/shell_integrations/: bash  fish  powershell  zsh
cortex_shell/session/: chat_session.py  chat_session_manager.py
cortex_shell/types/: __init__.py  cfgv.py  prompt_toolkit.py
testing/: util.py
testing/resources/shell_integration_wrappers/: bash
tests/: conftest.py  test_application.py  test_cache.py  test_chat_session.py  test_configuration.py  test_error_handler.py  test_role.py  test_shell_integration.py  test_util.py
tests/configuration/: test_config.py  test_validators.py
tests/handlers/: test_default_handler.py  test_repl_handler.py
tests/history/: test_persistent_history.py  test_volatile_history.py
tests/post_processing/: test_file_output_post_processing.py  test_no_post_processing.py  test_shell_execution_post_processing.py
tests/processing/: test_default_processing.py  test_file_processing.py
tests/renderer/: test_formatted_renderer.py  test_plain_renderer.py
tests/session/: test_chat_session.py  test_chat_session_manager.py
